--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -4,18 +4,22 @@
   <head>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'travel/style.css' %}">
+    <script src="{% static 'travel/script.js' %}"></script>
+    <script>
+      var CSRF_TOKEN = '{{ csrf_token }}';
+    </script>
     
     <title>{% block title %}TravelAgent{% endblock %}</title>
   </head>
   
   <body>
-    <h1>TravelAgent</h1>
+    <h1><a href="{% url 'index' %}">TravelAgent</a></h1>
     <p>{{ user.username|default:'Guest' }}</p>
     <div>
       {% if user.is_authenticated %}
         <a href="{{ user.profile.get_absolute_url }}">My Profile</a>
         <a href="{% url 'profile-update' %}">Edit Profile</a>
-        <a href="{% url 'itinerary-following' %}">Following Itineraries</a>
+        <a href="{% url 'following-users' %}">Following Users</a>
         <a href="{% url 'itinerary-add' %}">Create Itinerary</a>
         <a href="{% url 'logout' %}">Logout</a>
       {% else %}
