--- a/travel/templates/travel/profile_detail.html
+++ b/travel/templates/travel/profile_detail.html
@@ -8,6 +8,10 @@
     <img scr="{{ object.profile_picture.url }}" />
 {% endif %}
 
+{% if object not in following and request.user.username != object.user.username %}
+    <button onclick="followUser('{{ object }}')">Follow {{ object }}</button>
+{% endif %}
+
 <div>Biography:</div>
 <div>{{ object.biography }}</div>
 
@@ -16,6 +20,9 @@
     {% for itinerary in published %}
         <li>
             <strong><a href="{{ itinerary.get_absolute_url }}">{{ itinerary.name }}</a></strong>
+            {% if request.user.username != itinerary.created_by.user.username and itinerary not in request.user.profile.saved_itineraries.all %}
+                <button onclick="saveItinerary('{{ itinerary }}')">Save Itinerary</button>
+            {% endif %}
         </li>
     {% empty %}
         <li>Not published any itineraries yet.</li>
@@ -28,6 +35,9 @@
         <li>
             <strong><a href="{{ itinerary.get_absolute_url }}">{{ itinerary.name }}</a></strong>
             Created by: <a href="{{ itinerary.created_by.get_absolute_url }}">{{ itinerary.created_by }}</a>
+            {% if request.user.username != itinerary.created_by.user.username and itinerary not in request.user.profile.saved_itineraries.all %}
+                <button onclick="saveItinerary('{{ itinerary }}')">Save Itinerary</button>
+            {% endif %}
         </li>
     {% empty %}
         <li>Not saved any itineraries yet.</li>
