--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -4,6 +4,8 @@
   <head>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'travel/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     
     <title>{% block title %}TravelAgent{% endblock %}</title>
   </head>
