--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -10,21 +10,33 @@
     <title>{% block title %}TravelAgent{% endblock %}</title>
   </head>
   
-  <body>
-    <h1>TravelAgent</h1>
-    <p>{{ user.username|default:'Guest' }}</p>
-    <div>
-      {% if user.is_authenticated %}
-        <a href="{{ user.profile.get_absolute_url }}">My Profile</a>
-        <a href="{% url 'profile-update' %}">Edit Profile</a>
-        <a href="{% url 'itinerary-following' %}">Following Itineraries</a>
-        <a href="{% url 'itinerary-add' %}">Create Itinerary</a>
-        <a href="{% url 'logout' %}">Logout</a>
-      {% else %}
-        <a href="{% url 'register' %}">Register</a>
-        <a href="{% url 'login' %}">Login</a>
-      {% endif %}
-  </div>
+  <body class="text-center">
+    <header class="blog-header py-3">
+      <div class="row flex-nowrap justify-content-between align-items-center">
+        <div class="col-4 pt-1">
+          <p>{{ user.username|default:'Guest' }}</p>
+        </div>
+        <div class="col-4 text-center">
+          <a class="blog-header-logo text-dark" href="#">TravelAgent</a>
+        </div>
+        <div class="col-4 pt-1">
+            <div class="btn-toolbar mb-2 mb-md-0">
+                <div class="btn-group mr-2">
+              {% if user.is_authenticated %}
+                <a class="btn btn-sm btn-outline-secondary" href="{{ user.profile.get_absolute_url }}">My Profile</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'profile-update' %}">Edit Profile</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'itinerary-following' %}">Following Itineraries</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'itinerary-add' %}">Create Itinerary</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'logout' %}">Logout</a>
+              {% else %}
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url 'login' %}">Login</a>
+              {% endif %}
+                </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
   <div id="content">
     {% block content %}{% endblock %}
