--- a/travel/templates/registration/register.html
+++ b/travel/templates/registration/register.html
@@ -9,6 +9,6 @@
 <form method="post">
     {% csrf_token %}
     {{form}}
-    <input type="submit" value="Register">
+    <input type="submit" value="Register" class="text-center btn btn-lg btn-primary btn-block">
 </form>
 {% endblock %}
