--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -18,10 +18,10 @@
     <header class="blog-header py-3">
       <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-4 pt-1">
-          <p>{{ user.username|default:'Guest' }}</p>
+          <p>Welcome, {{ user.username|default:'Guest' }}!</p>
         </div>
         <div class="col-4 text-center">
-          <a class="blog-header-logo text-dark" href="#">TravelAgent</a>
+          <h1 class="display-1"><a class="blog-header-logo text-dark" href="#">TravelAgent</a></h1>
         </div>
         <div class="col-4 pt-1">
             <div class="btn-toolbar mb-2 mb-md-0">
