--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -21,6 +21,7 @@
         <a href="{% url 'profile-update' %}">Edit Profile</a>
         <a href="{% url 'following-users' %}">Following Users</a>
         <a href="{% url 'itinerary-add' %}">Create Itinerary</a>
+        <a href="{% url 'filter' %}">Find Itinerary</a>
         <a href="{% url 'logout' %}">Logout</a>
       {% else %}
         <a href="{% url 'register' %}">Register</a>
