--- a/travel/templates/travel/search_results.html
+++ b/travel/templates/travel/search_results.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+{% block content %}
+
 <h1>Search Results</h1>
 
 <ul>
@@ -7,3 +11,5 @@
     </li>
   {% endfor %}
 </ul>
+
+{% endblock %}
