--- a/travel/templates/travel/filter.html
+++ b/travel/templates/travel/filter.html
@@ -10,14 +10,16 @@
   <br/><br/>
   <label>Budget:</label>
   <select name = "budget">
+    <option value = "Any Budget">Any Budget</option>
     <option value = "Less Than $500">Less Than $500</option>
-    <option value = "$500-1000">$500</option>
+    <option value = "$500-1000">$500-1000</option>
     <option value = "$1000-2000">$1000-2000</option>
     <option value = "More Than $2000">More Than $2000</option>
  </select>
   <br/><br/>
   <label>Trip Length:</label>
   <select name = "trip_length">
+    <option value = "Any Trip Length">Any Trip Length</option>
     <option value = "Less Than A Week">Less Than A Week</option>
     <option value = "One Week">One Week</option>
     <option value = "Two Weeks">Two Weeks</option>
@@ -28,7 +30,8 @@
   <br/><br/>
   <label>Month:</label>
   <select name = "month">
-    <option value = "JANUARY">JANUARY</option>
+    <option value = "Any Month">Any Month</option>
+    <option value = "January">January</option>
     <option value = "February">February</option>
     <option value = "March">March</option>
     <option value = "April">April</option>
@@ -44,7 +47,8 @@
   <br/><br/>
   <label>Climate:</label>
   <select name = "climate">
-    <option value = "TROPICAL">TROPICAL</option>
+    <option value = "Any Climate">Any Climate</option>
+    <option value = "Tropical">Tropical</option>
     <option value = "Dry">Dry</option>
     <option value = "Temperate">Temperate</option>
     <option value = "Continental">Continental</option>
