--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -12,15 +12,34 @@
     </script>
     
     <title>{% block title %}TravelAgent{% endblock %}</title>
+
+    <style>
+      body, html {
+        height: 100%;
+      }
+      .bg {
+        /* The image used */
+        background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).webp");
+
+        /* Full height */
+        height: 100%;
+
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
   </head>
   
   <body class="text-center">
+    <div class="view" style="background-image: url({% static 'bg.png' %}); background-repeat: no-repeat; background-size: cover; background-position: center center; height: 100%;">    <!-- <div class="bg"></div> -->
     <header class="blog-header py-3">
       <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-4 text-center">
           <h1 class="display-3"><a class="blog-header-logo text-dark" href="{% url 'index' %}">TravelAgent</a></h1>
         </div>
-        <div class="col-4 pt-1">
+        <div class="col-4 pt-1 has-bg-img position-relative z-index-1">
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group mr-2">
               {% if user.is_authenticated %}
@@ -46,6 +65,6 @@
   <div id="content">
     {% block content %}{% endblock %}
   </div>
-  
+  </div>
   </body>
 </html>
