--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -33,7 +33,7 @@
   </head>
   
   <body class="text-center">
-    <div class="view" style="background-image: url({% static 'bg.png' %}); background-repeat: no-repeat; background-size: cover; background-position: center center; height: 100%;">    <!-- <div class="bg"></div> -->
+    <div class="view" style="background-image: url({% static 'bg.png' %}); background-repeat: no-repeat; background-size: cover; background-position: center center; height: 100%;">
     <header class="blog-header py-3">
       <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-4 text-center">
