--- a/travel/templates/travel/itinerary_detail.html
+++ b/travel/templates/travel/itinerary_detail.html
@@ -4,6 +4,8 @@
 {% block content %}
 <h1>{{ object }}</h1>
 
+<img class="card-img-top" src="{{ object.picture.url }}" alt="Card image cap">
+
 {% if request.user.username != object.created_by.user.username and object not in request.user.profile.saved_itineraries.all %}
     <button onclick="saveItinerary('{{ object }}')">Save Itinerary</button>
 {% endif %}
