--- a/travel/templates/base.html
+++ b/travel/templates/base.html
@@ -24,15 +24,15 @@
             <div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group mr-2">
               {% if user.is_authenticated %}
-                <a class="btn btn-sm btn-outline-secondary" href="{% url 'itinerary-add' %}">Create Itinerary</a>
-                <a class="btn btn-sm btn-outline-secondary" href="{% url 'following-users' %}">Following Users</a>
-                <a class="btn btn-sm btn-outline-secondary" href="{% url 'filter' %}">Find Itineraries</a>
-                <a class="btn btn-sm btn-outline-secondary" href="{{ user.profile.get_absolute_url }}">My Profile</a>
-                <a class="btn btn-sm btn-outline-secondary" href="{% url 'profile-update' %}">Edit Profile</a>
-                <a class="btn btn-sm btn-outline-secondary" href="{% url 'logout' %}">Logout</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{% url 'itinerary-add' %}">Create Itinerary</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{% url 'following-users' %}">Following Users</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{% url 'filter' %}">Find Itineraries</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{{ user.profile.get_absolute_url }}">My Profile</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{% url 'profile-update' %}">Edit Profile</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{% url 'logout' %}">Logout</a>
               {% else %}
-                <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
-                <a class="btn btn-sm btn-outline-secondary" href="{% url 'login' %}">Login</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{% url 'register' %}">Register</a>
+                <a class="btn btn-sm btn btn-outline-dark bg-light" href="{% url 'login' %}">Login</a>
               {% endif %}
                 </div>
           </div>
