--- a/travel/templates/travel/filter.html
+++ b/travel/templates/travel/filter.html
@@ -54,6 +54,6 @@
     <option value = "Polar">Polar</option>
  </select>
   <br/><br/>
-  <button type="submit">Submit</button>
+  <button class="btn btn-primary" type="submit">Submit</button>
 </form>
 {% endblock %}
