--- a/travel/templates/travel/itinerary_detail.html
+++ b/travel/templates/travel/itinerary_detail.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>{{ object }}</h1>
 
-<img class="card-img-top" src="{{ object.picture.url }}" alt="Card image cap">
+<div class="row justify-content-md-center"><img class="card-img-top" src="{{ object.picture.url }}" alt="Card image cap" style="width:400px;"></div>
 
 {% if request.user.username != object.created_by.user.username and object not in request.user.profile.saved_itineraries.all %}
     <button class="btn btn-primary" onclick="saveItinerary('{{ object }}')">Save Itinerary</button>
